src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__bound_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/bound_method.lox
---
A.method(arg)
