src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__call_other_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/call_other_method.lox
---
Derived.bar()
Base.foo()
