src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__call_same_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/call_same_method.lox
---
Derived.foo()
Base.foo()
