src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__closure.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/closure.lox
---
Base
