src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__constructor.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/constructor.lox
---
Derived.init()
Base.init(a, b)
