src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__indirectly_inherited.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/indirectly_inherited.lox
---
C.foo()
A.foo()
