src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__missing_arguments.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/missing_arguments.lox
---
Runtime error: [ line 9 ] : Expected 2 arguments but got 1.
