src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__no_superclass_bind.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/no_superclass_bind.lox
---
Resolver error(s):
[ line 3 ] : Can't use 'super' in a class with no superclass.
