src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__no_superclass_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/no_superclass_method.lox
---
Runtime error: [ line 5 ] : Undefined property 'doesNotExist'.
